# YOLO-for-Trajectory-Correction

./: README.md  create_datasets.py  delete_non_labeled_imgs.py  detect.py  lane_detection.py  pred_video.py  predict.py  requirements.txt  train.py  val.py
254473_import-images_001/: data_config.yaml
254473_import-images_001/labels/train/: RoLand_1.txt  RoLand_10.txt  RoLand_1000.txt  RoLand_1002.txt  RoLand_1003.txt  RoLand_1006.txt  RoLand_1009.txt  RoLand_101.txt  RoLand_1010.txt  RoLand_1011.txt  RoLand_1014.txt  RoLand_1016.txt  RoLand_1018.txt  RoLand_1021.txt  RoLand_1022.txt  RoLand_1023.txt  RoLand_1025.txt  RoLand_1027.txt  RoLand_1028.txt  RoLand_103.txt  RoLand_1030.txt  RoLand_1031.txt  RoLand_1032.txt  RoLand_1033.txt  RoLand_1034.txt  RoLand_1035.txt  RoLand_1037.txt  RoLand_1038.txt  RoLand_1039.txt  RoLand_1041.txt  RoLand_1042.txt  RoLand_1043.txt  RoLand_1044.txt  RoLand_1046.txt  RoLand_1047.txt  RoLand_1049.txt  RoLand_1050.txt  RoLand_1051.txt  RoLand_1052.txt  RoLand_1053.txt  (+371 more)
datasets/labels/: train.cache  val.cache
datasets/labels/test/: RoLand_1007.txt  RoLand_1017.txt  RoLand_1026.txt  RoLand_1160.txt  RoLand_1177.txt  RoLand_158.txt  RoLand_160.txt  RoLand_199.txt  RoLand_211.txt  RoLand_399.txt  RoLand_403.txt  RoLand_409.txt  RoLand_425.txt  RoLand_442.txt  RoLand_488.txt  RoLand_598.txt  RoLand_602.txt  RoLand_610.txt  RoLand_617.txt  RoLand_64.txt
datasets/labels/train/: RoLand_100.txt  RoLand_1004.txt  RoLand_1005.txt  RoLand_1008.txt  RoLand_1012.txt  RoLand_1013.txt  RoLand_1015.txt  RoLand_1019.txt  RoLand_102.txt  RoLand_1020.txt  RoLand_1024.txt  RoLand_1029.txt  RoLand_1036.txt  RoLand_104.txt  RoLand_1040.txt  RoLand_1045.txt  RoLand_1048.txt  RoLand_105.txt  RoLand_1054.txt  RoLand_1055.txt  RoLand_1057.txt  RoLand_1059.txt  (+327 more)
documentation/: Documentation.tex
ros/: lane_detection_camera.py
ros/shivaa_msgs/: CMakeLists.txt  package.xml
ros/shivaa_msgs/action/: FollowPath.action  LaneDetection.action
ros/shivaa_msgs/msg/: KinematicsStatus.msg  LaneState.msg  StateVector.msg
ros/shivaa_msgs/srv/: GetForwardKinematics.srv  GetInverseKinematics.srv
(+141 files in other folders)
